<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xchg.wavegen.WaveGenActivity">
    <Button
        android:id="@+id/bt_onOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bt_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="10dp"
        android:text="@string/set"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:text="1000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editAplitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFrequency"
        tools:text="100"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/hz"
        app:layout_constraintStart_toEndOf="@+id/editFrequency"
        app:layout_constraintTop_toTopOf="@+id/editFrequency" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/mv"
        app:layout_constraintStart_toEndOf="@+id/editAplitude"
        app:layout_constraintTop_toTopOf="@+id/editAplitude" />
</android.support.constraint.ConstraintLayout>